--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -10,15 +10,15 @@
 
 <body>
     <div class="h-screen bg-black font-bodyFont grid grid-rows-5">
-        <div>
-            <a href="/">
-                <button class="btn bg-white text-black m-10">Go back to home page</button>
+        <div class="m-14">
+            <a class="btn bg-white text-black" href="/">
+                Go back to home page
             </a>
         </div>
         <div class="flex flex-col items-center gap-32 bg-white 
-        w-1/3 h-3/4 pt-10 row-span-4 pb-40 mx-auto rounded-xl">
-            <h1 class="text-4xl underline tracking-wider">Sign in</h1>
-            <form class="flex flex-col gap-24" action="" method="post">
+        w-1/3 h-4/5 pt-10 row-span-4 pb-40 mx-auto rounded-xl">
+            <h2 class="text-4xl underline tracking-wider">Sign in</h2>
+            <form class="flex flex-col gap-16" action="" method="post">
                 <div class="flex flex-col gap-10">
                     <section class="flex items-center gap-2">
                         <svg class="w-12 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -40,7 +40,14 @@
                             required>
                     </section>
                 </div>
-                <button class="btn bg-black text-white w-48 mx-auto" type="submit">Sign in</button>
+                <section class="flex flex-col gap-5">
+                    <button class="btn bg-black text-white w-48 mx-auto" type="submit">Sign in</button>
+                    <p class="text-primary">If you don't have an account, sign up below!</p>
+                    <a class="btn bg-black text-white w-48 mx-auto flex justify-center" href="/signup">
+                        Sign up
+                    </a>
+                </section>
+
             </form>
         </div>
     </div>
