--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -18,8 +18,9 @@
         <div class="flex flex-col items-center gap-32 bg-white 
         w-1/3 h-4/5 pt-10 row-span-4 pb-40 mx-auto rounded-xl">
             <h2 class="text-4xl underline tracking-wider">Sign in</h2>
-            <form class="flex flex-col gap-16" action="" method="post">
-                <div class="flex flex-col gap-10">
+            <!-- Error messge ce biti absolute u odnosu na form -->
+            <form class="flex flex-col gap-20 relative" action="" method="post">
+                <div class="flex flex-col gap-5">
                     <section class="flex items-center gap-2">
                         <svg class="w-12 fill-primary" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <title>Username</title>
@@ -40,12 +41,17 @@
                             required>
                     </section>
                 </div>
-                <section class="flex flex-col gap-5">
-                    <button class="btn bg-black text-white w-48 mx-auto" type="submit">Sign in</button>
-                    <p class="text-primary">If you don't have an account, sign up below!</p>
-                    <a class="btn bg-black text-white w-48 mx-auto flex justify-center" href="/signup">
-                        Sign up
-                    </a>
+                <section class="flex justify-center">
+                    <% if(message) { %>
+                    <p class="font-bold absolute top-32 text-xl tracking-wider"><%= message  %></p>
+                    <% } %>
+                    <div class="flex flex-col gap-5">
+                        <button class="btn bg-black text-white w-48 mx-auto" type="submit">Sign in</button>
+                        <p class="text-primary">If you don't have an account, sign up below!</p>
+                        <a class="btn bg-black text-white w-48 mx-auto flex justify-center" href="/signup">
+                            Sign up
+                        </a>
+                    </div>
                 </section>
 
             </form>
