Removed req.user from every router, added  res.locals.currentUser = req.user; in app.js, which defines user for every page

--- a/views/partials/contactPage.ejs
+++ b/views/partials/contactPage.ejs
@@ -24,12 +24,11 @@
         </div>
         <div class="inputContact">
             <label for="message">Message</label>
-            <textarea required class="border-2 border-primary p-4 resize-x" name="" id="message" cols="30"
+            <textarea required class="message border-2 border-primary p-4 resize-x" name="" cols="30"
                 rows="10"></textarea>
         </div>
         <button class="btn bg-black text-white uppercase">send</button>
-        <div
-            class="messageContact opacity-0 transition-opacity duration-500 absolute top-10 bg-green-500 px-20 py-5 rounded-lg">
+        <div class="messageContact messageSuccess opacity-0">
             <p>Message sent</p>
         </div>
     </form>
