--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -586,6 +586,10 @@ video {
   top: 8rem;
 }
 
+.top-40{
+  top: 10rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -691,6 +695,10 @@ video {
 
 .mt-profileMarginTop{
   margin-top: 155px;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .flex{
@@ -955,6 +963,10 @@ video {
   gap: 2.25rem;
 }
 
+.gap-24{
+  gap: 6rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1040,6 +1052,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-20{
+  padding: 5rem;
+}
+
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
@@ -1119,6 +1135,10 @@ video {
 
 .pt-6{
   padding-top: 1.5rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
 .text-start{
