--- a/views/newBrand.ejs
+++ b/views/newBrand.ejs
@@ -10,6 +10,7 @@
 
 <body>
     <%- include ./partials/nav.ejs  %>
+    <% if(currentUser && currentUser.username === "admin") { %>
     <h3 class="flex justify-center text-3xl font-bodyFont">Add new brand</h3>
     <form action="" method="post" class="mt-20 flex flex-col items-center">
         <p class="text-primary text-2xl tracking-wide">
@@ -42,6 +43,10 @@
         </div>
         <button class="btn bg-black text-white my-20">Add brand</button>
     </form>
+    <% } else { %>
+    <p class="pageNotFoundP">Page not found!</p>
+    <% } %>
+
     <%- include ./partials/footer.ejs  %>
 </body>
 
