Edited bg-color for ul in profile

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -20,7 +20,7 @@
             </a>
         </li>
         <% if(currentUser){ %>
-        <li class="min-h-48 flex-col flex gap-4 mt-profileMarginTop bg-white">
+        <li class="min-h-48 flex-col flex gap-4 mt-profileMarginTop">
             <svg class="profileLogo w-10 cursor-pointer" xmlns="http://www.w3.org/2000/svg" version="1.0"
                 viewBox="0 0 1280.000000 1231.000000" preserveAspectRatio="xMidYMid meet">
                 <metadata>
