--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -754,6 +754,18 @@ video {
   margin-top: 2rem;
 }
 
+.ml-24{
+  margin-left: 6rem;
+}
+
+.ml-40{
+  margin-left: 10rem;
+}
+
+.ml-28{
+  margin-left: 7rem;
+}
+
 .flex{
   display: flex;
 }
@@ -824,6 +836,14 @@ video {
 
 .h-full{
   height: 100%;
+}
+
+.h-40{
+  height: 10rem;
+}
+
+.h-32{
+  height: 8rem;
 }
 
 .max-h-index{
@@ -920,6 +940,10 @@ video {
 
 .w-2\/3{
   width: 66.666667%;
+}
+
+.w-60{
+  width: 15rem;
 }
 
 .transform{
