--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -39,13 +39,50 @@
             </p>
         </section>
 
-        <section class="w-3/4 mt-14 mb-64 grid grid-cols-5 border-2 border-blue-600">
+        <section class="w-3/4 mt-14 mb-64 grid grid-cols-5">
             <!-- Cart items div -->
-            <div class="col-span-3">
-                <p>1</p>
+            <div class="col-span-3 p-5 flex flex-col gap-7">
+
+                <% for(car of cartItems) { %>
+                <section class="flex flex-col gap-2">
+                    <p class="font-bold text-xl">
+                        <span>
+                            <%= car.brand.name  %>
+                        </span>
+                        <span>
+                            <%= car.model  %>
+                        </span>
+                    </p>
+                    <div class="flex gap-4">
+                        <div>
+                            <img class="w-40 rounded-lg" src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
+                        </div>
+                        <div class="flex items-center gap-16">
+                            <p>
+                                Car page:
+                                <a class="underline" href="/products/<%= car._id %>">
+                                    Click
+                                </a>
+                            </p>
+                            <p class="flex flex-col gap-2 items-center ">
+                                <span>Car price:</span>
+                                <span class="font-bold"><%= car.price  %></span>
+                            </p>
+                            <p class="flex flex-col gap-2 items-center ">
+                                <span>Car year:</span>
+                                <span class="font-bold"><%= car.year  %></span>
+                            </p>
+                        </div>
+                        <div class="flex items-center ml-28">
+                            <span class="text-2xl cursor-pointer">x</span>
+                        </div>
+                    </div>
+                </section>
+                <% } %>
+
             </div>
             <!-- Checkout div -->
-            <div class="border-l-2 border-l-black p-5 col-span-2">
+            <div class=" p-5 col-span-2">
                 <div class="flex flex-col gap-5">
                     <h2>Enter Promo code:</h2>
                     <div class="flex gap-5">
