--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -606,16 +606,17 @@ video {
   grid-column: span 4 / span 4;
 }
 
-.col-span-6{
-  grid-column: span 6 / span 6;
-}
-
 .row-span-4{
   grid-row: span 4 / span 4;
 }
 
 .m-14{
   margin: 3.5rem;
+}
+
+.mx-1{
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 
 .mx-16{
@@ -653,29 +654,9 @@ video {
   margin-bottom: 7rem;
 }
 
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
-.mx-1{
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
-
 .my-64{
   margin-top: 16rem;
   margin-bottom: 16rem;
-}
-
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .mb-20{
@@ -698,16 +679,28 @@ video {
   margin-bottom: 15rem;
 }
 
-.mb-72{
-  margin-bottom: 18rem;
+.mb-64{
+  margin-bottom: 16rem;
+}
+
+.ml-28{
+  margin-left: 7rem;
 }
 
 .ml-80{
   margin-left: 20rem;
 }
 
+.mr-1{
+  margin-right: 0.25rem;
+}
+
 .mt-10{
   margin-top: 2.5rem;
+}
+
+.mt-14{
+  margin-top: 3.5rem;
 }
 
 .mt-2{
@@ -718,52 +711,24 @@ video {
   margin-top: 5rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .mt-32{
   margin-top: 8rem;
-}
-
-.mt-48{
-  margin-top: 12rem;
-}
-
-.mt-profileMarginTop{
-  margin-top: 155px;
-}
-
-.mt-14{
-  margin-top: 3.5rem;
-}
-
-.mr-1{
-  margin-right: 0.25rem;
-}
-
-.mb-64{
-  margin-bottom: 16rem;
 }
 
 .mt-5{
   margin-top: 1.25rem;
 }
 
-.mt-3{
-  margin-top: 0.75rem;
-}
-
 .mt-8{
   margin-top: 2rem;
 }
 
-.ml-24{
-  margin-left: 6rem;
-}
-
-.ml-40{
-  margin-left: 10rem;
-}
-
-.ml-28{
-  margin-left: 7rem;
+.mt-profileMarginTop{
+  margin-top: 155px;
 }
 
 .flex{
@@ -830,22 +795,6 @@ video {
   height: 40rem;
 }
 
-.h-20{
-  height: 5rem;
-}
-
-.h-full{
-  height: 100%;
-}
-
-.h-40{
-  height: 10rem;
-}
-
-.h-32{
-  height: 8rem;
-}
-
 .max-h-index{
   max-height: 40rem;
 }
@@ -876,6 +825,10 @@ video {
 
 .w-32{
   width: 8rem;
+}
+
+.w-40{
+  width: 10rem;
 }
 
 .w-44{
@@ -926,32 +879,16 @@ video {
   width: 50rem;
 }
 
-.w-2{
-  width: 0.5rem;
-}
-
-.w-20{
-  width: 5rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-60{
-  width: 15rem;
-}
-
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.cursor-none{
+  cursor: none;
 }
 
 .resize-x{
@@ -978,22 +915,6 @@ video {
 
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-cols-9{
-  grid-template-columns: repeat(9, minmax(0, 1fr));
-}
-
-.grid-cols-10{
-  grid-template-columns: repeat(10, minmax(0, 1fr));
-}
-
-.grid-cols-6{
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-5{
@@ -1080,10 +1001,6 @@ video {
   gap: 2.25rem;
 }
 
-.overflow-auto{
-  overflow: auto;
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1116,10 +1033,6 @@ video {
   border-width: 2px;
 }
 
-.border-l-2{
-  border-left-width: 2px;
-}
-
 .border-b-2{
   border-bottom-width: 2px;
 }
@@ -1132,16 +1045,6 @@ video {
 .border-primary{
   --tw-border-opacity: 1;
   border-color: rgb(150 151 153 / var(--tw-border-opacity));
-}
-
-.border-blue-600{
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
-}
-
-.border-l-black{
-  --tw-border-opacity: 1;
-  border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-b-primary{
@@ -1190,10 +1093,6 @@ video {
 
 .p-6{
   padding: 1.5rem;
-}
-
-.p-0{
-  padding: 0px;
 }
 
 .px-16{
@@ -1569,6 +1468,14 @@ video {
 .checked\:bg-black:checked{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:w-96:hover{
+  width: 24rem;
+}
+
+.hover\:w-productsImg:hover{
+  width: 25rem;
 }
 
 .hover\:scale-125:hover{
