--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -34,9 +34,11 @@
                 <span>item</span>
                 <% } %>
             </p>
-            <p class="flex justify-end">
-                Hope you had a good time shopping!
-            </p>
+            <div class="flex justify-end">
+                <p class="p-5">
+                    Hope you had a good time shopping!
+                </p>
+            </div>
         </section>
 
         <section class="w-3/4 mt-14 mb-64 grid grid-cols-5">
@@ -66,7 +68,7 @@
                             </p>
                             <p class="flex flex-col gap-2 items-center ">
                                 <span>Car price:</span>
-                                <span class="font-bold"><%= car.price  %></span>
+                                <span class="font-bold"><%= car.price  %>$</span>
                             </p>
                             <p class="flex flex-col gap-2 items-center ">
                                 <span>Car year:</span>
@@ -97,19 +99,21 @@
                     <div class="mt-5 flex flex-col gap-4">
                         <p class="flex justify-between">
                             <span>Subtotal</span>
-                            <span class="font-bold text-xl">10000</span>
+                            <span class="font-bold text-xl"><%= subtotal  %></span>
                         </p>
                         <p class="flex justify-between">
                             <span>Shipping costs</span>
-                            <span>26500</span>
+                            <span><%= shipmentCost  %></span>
                         </p>
                         <p class="flex justify-between">
                             <span>Estimated Sales Tax</span>
-                            <span>26500</span>
+                            <span><%= salesTax  %></span>
                         </p>
                         <p class="flex justify-between mt-3">
                             <span>Estimated Total:</span>
-                            <span class="font-bold text-xl">120000</span>
+                            <span class="font-bold text-xl">
+                                <%= subtotal + salesTax + shipmentCost %>
+                            </span>
                         </p>
                         <button class="btn bg-black text-white mt-8">
                             Checkout
