--- a/views/itemPage.ejs
+++ b/views/itemPage.ejs
@@ -12,8 +12,8 @@
 <body>
     <%- include ./partials/nav.ejs  %>
     <div class="my-20 flex justify-center">
-        <div class="flex w-singleCarPage flex-col items-center">
-            <img class="h-singleCarPage rounded" src="../img/<%= car.model %>.jpg" alt="<%= car.model  %>">
+        <form method="post" class="flex w-singleCarPage flex-col items-center">
+            <img class="h-singleCarPage rounded" src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
             <div class="w-full p-10 font-bodyFont">
                 <div class="flex flex-col gap-5">
                     <h2 class="flex justify-center text-2xl underline">Car information:</h2>
@@ -60,8 +60,22 @@
                     </div>
                 </div>
             </div>
-            <button class="btn bg-black text-white w-52 h-16 mt-10">Add to cart</button>
-        </div>
+            <% if (!currentUser || (currentUser && currentUser.username !== "admin")) { %>
+            <!-- Konvertujem car._id is ObjectID() formata u string, item_id je string -->
+            <% if (cartItems && cartItems.every(item => item._id !== car._id.toString() )) { %>
+            <button class="btn bg-black text-white">Add to cart</button>
+            <% } else { %>
+            <p>Car already added</p>
+            <% } %>
+            <!-- Admin je ulogovan -->
+            <% } else { %>
+            <p>Admin cannot buy cars!</p>
+            <% } %>
+
+
+
+
+        </form>
     </div>
     <%- include ./partials/footer.ejs  %>
 
