Fixed bug for imgSliders

--- a/views/partials/imageSliderIndex.ejs
+++ b/views/partials/imageSliderIndex.ejs
@@ -4,8 +4,7 @@
     <a href="/products/<%= car._id  %>">
         <div class="slide relative hidden">
             <div class="overflow-hidden w-imgSlider">
-                <img class="rounded h-imgSlider cursor-pointer" src="../img/<%= car.model %>.jpg"
-                    alt="<%= car.model %>">
+                <img class="rounded h-imgSlider cursor-pointer" src="/img/<%= car.model %>.jpg" alt="<%= car.model %>">
             </div>
             <div class="absolute bottom-0 w-full p-5 shadow-2xl bg-white ">
                 <div class="text-xl">
