--- a/views/products.ejs
+++ b/views/products.ejs
@@ -37,7 +37,7 @@
                 <div>
                     <div class="overflow-hidden w-productsImg ">
                         <img class="h-productsImg rounded-tr-lg rounded-tl-lg hover:scale-125 hover:transform duration-700"
-                            src="../img/<%= car.model %>.jpg" alt="<%= car.model  %>">
+                            src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
                     </div>
                     <div class="w-productsImg px-4 font-bodyFont shadow-2xl">
                         <p class="pt-6 text-base">
