--- a/views/partials/mostPopularItem.ejs
+++ b/views/partials/mostPopularItem.ejs
@@ -5,7 +5,7 @@
         <div class="my-10">
             <div class="overflow-hidden">
                 <img class="w-popularCar h-popularCar center rounded-lg cursor-pointer hover:scale-150 hover:transform duration-500"
-                    src="../img/<%= popularCar.model %>.jpg" alt="">
+                    src="/img/<%= popularCar.model %>.jpg" alt="">
             </div>
             <div class="bg-white pb-5 shadow-2xl">
                 <div class="text-xl pt-5 pl-5">
