--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -659,6 +659,11 @@ video {
   margin-bottom: 16rem;
 }
 
+.my-52{
+  margin-top: 13rem;
+  margin-bottom: 13rem;
+}
+
 .mb-20{
   margin-bottom: 5rem;
 }
@@ -729,6 +734,14 @@ video {
 
 .mt-profileMarginTop{
   margin-top: 155px;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
 }
 
 .flex{
@@ -817,6 +830,10 @@ video {
 
 .w-12{
   width: 3rem;
+}
+
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .w-24{
@@ -917,6 +934,18 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
+.grid-cols-6{
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
+.grid-cols-7{
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.grid-cols-8{
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
 .grid-rows-5{
   grid-template-rows: repeat(5, minmax(0, 1fr));
 }
@@ -1001,12 +1030,20 @@ video {
   gap: 2.25rem;
 }
 
+.gap-2\.5{
+  gap: 0.625rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
 .whitespace-normal{
   white-space: normal;
+}
+
+.text-nowrap{
+  text-wrap: nowrap;
 }
 
 .rounded{
@@ -1098,11 +1135,6 @@ video {
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .px-4{
@@ -1217,6 +1249,11 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold{
@@ -1497,4 +1534,9 @@ video {
 .hover\:text-primary:hover{
   --tw-text-opacity: 1;
   color: rgb(150 151 153 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
