--- a/views/partials/homePageImage.ejs
+++ b/views/partials/homePageImage.ejs
@@ -1,5 +1,5 @@
 <div class="relative flex justify-center items-center">
-    <img class="max-h-index opacity-85 w-full" src="../img/carImg.jpg" alt="car picture">
+    <img class="max-h-index opacity-85 w-full" src="/img/carImg.jpg" alt="car picture">
     <p class="absolute text-white text-4xl tracking-wider">
         The place where your car dreams come true </p>
 </div>
