--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -610,6 +610,10 @@ video {
   grid-row: span 4 / span 4;
 }
 
+.row-span-5{
+  grid-row: span 5 / span 5;
+}
+
 .m-14{
   margin: 3.5rem;
 }
@@ -812,6 +816,10 @@ video {
   height: 40rem;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
 .max-h-index{
   max-height: 40rem;
 }
@@ -900,6 +908,10 @@ video {
   width: 50rem;
 }
 
+.w-20{
+  width: 5rem;
+}
+
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -944,6 +956,10 @@ video {
 
 .grid-rows-5{
   grid-template-rows: repeat(5, minmax(0, 1fr));
+}
+
+.grid-rows-6{
+  grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1120,6 +1136,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-96{
+  padding: 24rem;
+}
+
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
@@ -1160,6 +1180,21 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-32{
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .pb-40{
   padding-bottom: 10rem;
 }
@@ -1194,6 +1229,10 @@ video {
 
 .pt-6{
   padding-top: 1.5rem;
+}
+
+.pb-20{
+  padding-bottom: 5rem;
 }
 
 .text-start{
