--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -47,8 +47,9 @@
             <div class="col-span-3 p-5 flex flex-col gap-7">
 
                 <% for(car of cartItems) { %>
-                <section class="flex flex-col gap-2">
-                    <p class="font-bold text-xl">
+                <!-- Pojedinacni itemi -->
+                <div class="flex flex-col gap-3">
+                    <p class="span-2 font-bold text-xl">
                         <span>
                             <%= car.brand.name  %>
                         </span>
@@ -56,19 +57,18 @@
                             <%= car.model  %>
                         </span>
                     </p>
-
-                    <div class="flex gap-4">
+                    <div class="flex gap-10">
                         <div>
                             <img class="w-40 rounded-lg" src="/img/<%= car.model %>.jpg" alt="<%= car.model  %>">
                         </div>
-                        <div class="flex items-center gap-16">
+                        <div class="grid grid-cols-5 items-center">
                             <p>
                                 Car page:
                                 <a class="underline" href="/products/<%= car._id %>">
                                     Click
                                 </a>
                             </p>
-                            <p class="flex flex-col gap-2 items-center ">
+                            <p class="col-span-2 flex flex-col gap-2 items-center">
                                 <span>Car price:</span>
                                 <span class="font-bold"><%= car.price  %>$</span>
                             </p>
@@ -76,15 +76,16 @@
                                 <span>Car year:</span>
                                 <span class="font-bold"><%= car.year  %></span>
                             </p>
+                            <!-- Brisanje auta iz korpe -->
+                            <form class="flex items-center justify-center" method="post">
+                                <input name="carId" value="<%= car._id  %>" class="hidden" type="text">
+                                <button type="submit" class="text-2xl cursor-pointer">x</button>
+                            </form>
                         </div>
-                        <!-- Brisanje auta iz korpe -->
-                        <form class="flex items-center ml-28" method="post">
-                            <input name="carId" value="<%= car._id  %>" class="hidden" type="text">
-                            <button type="submit" class="text-2xl cursor-pointer">x</button>
-                        </form>
-                    </div>
 
-                </section>
+                    </div>
+                </div>
+
                 <% } %>
 
             </div>
