--- a/views/partials/imageSliderIndex.ejs
+++ b/views/partials/imageSliderIndex.ejs
@@ -3,8 +3,9 @@
     <% imgSliderCars.forEach(car => { %>
     <a href="/products/<%= car._id  %>">
         <div class="slide relative hidden">
-            <div class="overflow-hidden w-imgSlider">
-                <img class="rounded h-imgSlider cursor-pointer" src="/img/<%= car.model %>.jpg" alt="<%= car.model %>">
+            <div>
+                <img class="rounded w-imgSlider h-imgSlider cursor-pointer" src="/img/<%= car.model %>.jpg"
+                    alt="<%= car.model %>">
             </div>
             <div class="absolute bottom-0 w-full p-5 shadow-2xl bg-white ">
                 <div class="text-xl">
@@ -18,7 +19,6 @@
                     <span class="font-bold pr-10 text-2xl"><%= car.price + " $" %></span>
                 </div>
             </div>
-            <div class="progressBar bg-gray-600 h-3 top-0 absolute"></div>
         </div>
     </a>
     <% }); %>
