--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -586,6 +586,22 @@ video {
   top: 8rem;
 }
 
+.top-1\/2{
+  top: 50%;
+}
+
+.top-5{
+  top: 1.25rem;
+}
+
+.top-40{
+  top: 10rem;
+}
+
+.top-52{
+  top: 13rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -668,6 +684,11 @@ video {
   margin-bottom: 16rem;
 }
 
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mb-20{
   margin-bottom: 5rem;
 }
@@ -694,10 +715,6 @@ video {
 
 .ml-2{
   margin-left: 0.5rem;
-}
-
-.ml-28{
-  margin-left: 7rem;
 }
 
 .ml-80{
@@ -748,6 +765,14 @@ video {
   margin-top: 155px;
 }
 
+.ml-10{
+  margin-left: 2.5rem;
+}
+
+.mr-10{
+  margin-right: 2.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -766,10 +791,6 @@ video {
 
 .h-2\/3{
   height: 66.666667%;
-}
-
-.h-3{
-  height: 0.75rem;
 }
 
 .h-36{
@@ -806,10 +827,6 @@ video {
 
 .h-screen{
   height: 100vh;
-}
-
-.h-signUp{
-  height: 40rem;
 }
 
 .h-singleCarPage{
@@ -908,10 +925,6 @@ video {
   width: 50rem;
 }
 
-.w-20{
-  width: 5rem;
-}
-
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -992,10 +1005,6 @@ video {
 
 .gap-10{
   gap: 2.5rem;
-}
-
-.gap-16{
-  gap: 4rem;
 }
 
 .gap-2{
@@ -1098,14 +1107,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-gray-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .fill-primary{
@@ -1136,13 +1145,14 @@ video {
   padding: 1.5rem;
 }
 
-.p-96{
-  padding: 24rem;
-}
-
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
+}
+
+.px-32{
+  padding-left: 8rem;
+  padding-right: 8rem;
 }
 
 .px-4{
@@ -1180,21 +1190,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-20{
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-32{
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .pb-40{
   padding-bottom: 10rem;
 }
@@ -1229,10 +1224,6 @@ video {
 
 .pt-6{
   padding-top: 1.5rem;
-}
-
-.pb-20{
-  padding-bottom: 5rem;
 }
 
 .text-start{
@@ -1305,6 +1296,11 @@ video {
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .text-primary{
