--- a/views/editCars.ejs
+++ b/views/editCars.ejs
@@ -97,15 +97,15 @@
     <script>
         // Potvrdjivanje delete
         function submitDelete(carId) {
-            const form = document.querySelector(`.deleteForm_${carId}`)
-            form.submit()
+            const form = document.querySelector(`.deleteForm_${carId}`);
+            form.submit();
         }
         // Funkcija za menjanje olovkice u check znak, kada se klikne na olovkicu za edit
         function toogleEdit(carId) {
             const confirmButton = document.querySelector(`.confirmButton_${carId}`);
             const editButton = document.querySelector(`.editButton_${carId}`);
             editButton.classList.toggle("hidden");
-            confirmButton.classList.toggle("hidden")
+            confirmButton.classList.toggle("hidden");
         }
         function handleEdit(carId) {
             toogleEdit(carId);
@@ -117,25 +117,25 @@
             carBrandOptions.forEach(brand => {
                 const brandOption = document.createElement("option");
                 brandOption.value = brand.textContent;
-                brandOption.text = brand.textContent
-                carBrandSelect.appendChild(brandOption)
+                brandOption.text = brand.textContent;
+                carBrandSelect.appendChild(brandOption);
                 if (brand.textContent === carBrand.textContent) {
-                    brandOption.setAttribute("selected", "selected")
+                    brandOption.setAttribute("selected", "selected");
                 }
-            })
+            });
 
             carBrandSelect.name = "carBrand";
             carBrandSelect.className = "px-5 py-2 border-2 border-primary";
-            carBrand.parentNode.replaceChild(carBrandSelect, carBrand)
+            carBrand.parentNode.replaceChild(carBrandSelect, carBrand);
             // Car model edit
             const carModel = document.querySelector(`.carModel_${carId}`);
             // Brisem sav razmak pre texta
             const carModelValue = carModel.textContent.trim();
             const carModelInput = document.createElement("textarea");
             carModelInput.value = carModelValue;
-            carModelInput.name = "carModel"
+            carModelInput.name = "carModel";
             carModelInput.className = "p-2 border-2 border-primary";
-            carModel.parentNode.replaceChild(carModelInput, carModel)
+            carModel.parentNode.replaceChild(carModelInput, carModel);
 
             // Car year edit
             const carYear = document.querySelector(`.carYear_${carId}`);
@@ -144,13 +144,13 @@
             const carYearInput = document.createElement("input");
             carYearInput.type = "number";
             carYearInput.value = carYearValue;
-            carYearInput.name = "carYear"
+            carYearInput.name = "carYear";
             // Handle-ujem min i max case
             carYearInput.addEventListener("input", () => {
-                carYearInput.value = Math.min(Math.max(carYearInput.value, 1), 2024)
-            })
-            carYearInput.className = "w-24 px-4 py-2";
-            carYear.parentNode.replaceChild(carYearInput, carYear)
+                carYearInput.value = Math.min(Math.max(carYearInput.value, 1), 2024);
+            });
+            carYearInput.className = "w-24 px-4 py-2 border-2 border-primary";
+            carYear.parentNode.replaceChild(carYearInput, carYear);
 
             // Car price edit
             const carPrice = document.querySelector(`.carPrice_${carId}`);
@@ -159,13 +159,13 @@
             const carPriceInput = document.createElement("input");
             carPriceInput.type = "number";
             carPriceInput.value = carPriceValue;
-            carPriceInput.name = "carPrice"
+            carPriceInput.name = "carPrice";
             // Handle-ujem min i max case
             carPriceInput.addEventListener("input", () => {
-                carPriceInput.value = Math.max(carPriceInput.value, 1)
-            })
+                carPriceInput.value = Math.max(carPriceInput.value, 1);
+            });
             carPriceInput.className = "w-32 px-4 py-2 text-start border-2 border-primary";
-            carPrice.parentNode.replaceChild(carPriceInput, carPrice)
+            carPrice.parentNode.replaceChild(carPriceInput, carPrice);
 
             // Car description edit
             const carDescription = document.querySelector(`.carDescription_${carId}`);
@@ -173,15 +173,16 @@
 
             const carDescriptionInput = document.createElement("textarea");
             carDescriptionInput.value = carDescriptionValue;
-            carDescriptionInput.name = "carDescription"
+            carDescriptionInput.name = "carDescription";
             carDescriptionInput.className = "col-span-4 p-2 border-2 border-primary";
-            carDescription.parentNode.replaceChild(carDescriptionInput, carDescription)
+            carDescription.parentNode.replaceChild(carDescriptionInput, carDescription);
         }
         function confirmEdit(carId) {
-            const confirmEditForm = document.querySelector(`.editForm_${carId}`)
-            toogleEdit(carId)
-            confirmEditForm.submit()
+            const confirmEditForm = document.querySelector(`.editForm_${carId}`);
+            toogleEdit(carId);
+            confirmEditForm.submit();
         }
+
     </script>
 </body>
 
