--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <div>
     <%- include ./partials/nav.ejs %>
     <%- include ./partials/homePageImage.ejs %>
-    <div class="flex mx-16 my-28 items-center justify-between">
+    <div class="flex xs:flex-col xl:flex-row mx-16 my-28 items-center justify-between">
       <%- include ./partials/imageSliderIndex.ejs  %>
       <%- include ./partials/newsletter.ejs  %>
     </div>
