--- a/views/partials/imageSliderIndex.ejs
+++ b/views/partials/imageSliderIndex.ejs
@@ -9,8 +9,7 @@
                 md:w-imgSliderMd md:h-imgSliderMd 
                 lg:w-imgSlider lg:h-imgSlider cursor-pointer" src="/img/<%= car.model %>.jpg" alt="<%= car.model %>">
             </div>
-            <div class="absolute bottom-0 md:w-imgSliderMd 
-            lg:w-imgSlider xs:p-1 sm:p-4
+            <div class="absolute bottom-0 xs:p-1 sm:p-4
             w-full lg:p-5 shadow-2xl bg-white">
                 <div class="xs:text-xs sm:text-sm lg:text-lg">
                     <span>
