--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -586,22 +586,6 @@ video {
   top: 8rem;
 }
 
-.top-1\/2{
-  top: 50%;
-}
-
-.top-5{
-  top: 1.25rem;
-}
-
-.top-40{
-  top: 10rem;
-}
-
-.top-52{
-  top: 13rem;
-}
-
 .z-10{
   z-index: 10;
 }
@@ -684,11 +668,6 @@ video {
   margin-bottom: 16rem;
 }
 
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
 .mb-20{
   margin-bottom: 5rem;
 }
@@ -761,18 +740,6 @@ video {
   margin-top: 2rem;
 }
 
-.mt-profileMarginTop{
-  margin-top: 155px;
-}
-
-.ml-10{
-  margin-left: 2.5rem;
-}
-
-.mr-10{
-  margin-right: 2.5rem;
-}
-
 .flex{
   display: flex;
 }
@@ -809,10 +776,6 @@ video {
   height: auto;
 }
 
-.h-imgSlider{
-  height: 40rem;
-}
-
 .h-newsLetter{
   height: 30rem;
 }
@@ -831,10 +794,6 @@ video {
 
 .h-singleCarPage{
   height: 40rem;
-}
-
-.h-10{
-  height: 2.5rem;
 }
 
 .max-h-index{
@@ -903,10 +862,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-imgSlider{
-  width: 50rem;
 }
 
 .w-newsLetter{
@@ -1112,11 +1067,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-slate-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
 .fill-primary{
   fill: #969799;
 }
@@ -1298,11 +1248,6 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(150 151 153 / var(--tw-text-opacity));
@@ -1353,6 +1298,15 @@ video {
   padding-left: 2rem;
   padding-right: 2rem;
   letter-spacing: 0.05em;
+}
+
+.btnSm{
+  cursor: pointer;
+  border-radius: 0.375rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .liNav{
@@ -1552,4 +1506,213 @@ video {
 .hover\:text-primary:hover{
   --tw-text-opacity: 1;
   color: rgb(150 151 153 / var(--tw-text-opacity));
+}
+
+@media (min-width: 320px){
+  .xs\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .xs\:mt-10{
+    margin-top: 2.5rem;
+  }
+
+  .xs\:h-imgSliderXs{
+    height: 15rem;
+  }
+
+  .xs\:w-imgSliderXs{
+    width: 25rem;
+  }
+
+  .xs\:w-full{
+    width: 100%;
+  }
+
+  .xs\:w-20{
+    width: 5rem;
+  }
+
+  .xs\:w-60{
+    width: 15rem;
+  }
+
+  .xs\:w-80{
+    width: 20rem;
+  }
+
+  .xs\:w-40{
+    width: 10rem;
+  }
+
+  .xs\:flex-col{
+    flex-direction: column;
+  }
+
+  .xs\:gap-2{
+    gap: 0.5rem;
+  }
+
+  .xs\:p-1{
+    padding: 0.25rem;
+  }
+
+  .xs\:text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .xs\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xs\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  @media not all and (min-width: 1024px){
+    .xs\:max-lg\:mx-5{
+      margin-left: 1.25rem;
+      margin-right: 1.25rem;
+    }
+
+    .xs\:max-lg\:mt-10{
+      margin-top: 2.5rem;
+    }
+
+    .xs\:max-lg\:mt-72{
+      margin-top: 18rem;
+    }
+
+    .xs\:max-lg\:flex-col{
+      flex-direction: column;
+    }
+  }
+
+  @media not all and (min-width: 768px){
+    .xs\:max-md\:text-sm{
+      font-size: 0.875rem;
+      line-height: 1.25rem;
+    }
+  }
+
+  @media not all and (min-width: 640px){
+    .xs\:max-sm\:flex-col{
+      flex-direction: column;
+    }
+  }
+}
+
+@media (min-width: 640px){
+  .sm\:mt-20{
+    margin-top: 5rem;
+  }
+
+  .sm\:h-imgSliderSm{
+    height: 25rem;
+  }
+
+  .sm\:w-imgSliderSm{
+    width: 30rem;
+  }
+
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+
+  .sm\:p-4{
+    padding: 1rem;
+  }
+
+  .sm\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .sm\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:h-imgSliderMd{
+    height: 28rem;
+  }
+
+  .md\:w-imgSliderMd{
+    width: 35rem;
+  }
+
+  .md\:w-full{
+    width: 100%;
+  }
+
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+
+  .lg\:mt-profileMarginTop{
+    margin-top: 155px;
+  }
+
+  .lg\:h-imgSlider{
+    height: 40rem;
+  }
+
+  .lg\:w-imgSlider{
+    width: 50rem;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:justify-between{
+    justify-content: space-between;
+  }
+
+  .lg\:p-5{
+    padding: 1.25rem;
+  }
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:w-imgSlider{
+    width: 50rem;
+  }
+
+  .xl\:flex-row{
+    flex-direction: row;
+  }
 }
