--- a/views/partials/newsletter.ejs
+++ b/views/partials/newsletter.ejs
@@ -1,12 +1,14 @@
-<div class=" p-10 w-newsLetter flex flex-col items-center justify-around  h-newsLetter mx-20">
+<div class="p-10 w-newsLetter flex flex-col items-center justify-around  h-newsLetter mx-20">
     <div class="flex flex-col gap-8 items-center">
-        <h2 class="font-bodyFont text-3xl">Monthly Newsletter</h2>
-        <p class="text-primary text-lg px-16">Sign up to receive updates from our shop,
+        <h2 class="font-bodyFont md:text-3xl xs:text-xl">Monthly Newsletter</h2>
+        <p class="text-primary text-lg px-16 xs:w-80
+        xs:text-sm md:text-lg md:w-full">Sign up to receive updates from
+            our shop,
             including new car announcements and upcoming events.</p>
     </div>
 
-    <div class="flex gap-4">
+    <div class="flex gap-4 sm:flex-row xs:flex-col">
         <input class="p-3 border-2 border-primary" type="text" placeholder="Enter your email...">
-        <button class="uppercase btn bg-black text-white">submit</button>
+        <button class="uppercase btn bg-black text-white xs:w-40 xs:mx-auto">submit</button>
     </div>
 </div>
